# leos-firmware

./: .gitmodules  CMakeLists.txt  README.md  compile  sebastien-compile
.github/workflows/: build-executables.yml  cmake-single-platform.yml
boards/: CMakeLists.txt
boards/efm/: efm.c  main.c
boards/radio/: config.c  config.h  cyphal_bridge.c  cyphal_bridge.h  main.c  radio.c  radio.h  radio_protocol.c  radio_protocol.h  tethered_test.c  tethered_test.h
boards/sensor/: cutdown.c  cutdown.h  main.c  purpleboard.c  purpleboard.h
cmake/: helpers.cmake
common/: README.md
common/platform/: CMakeLists.txt
common/platform/include/common/: platform.h  platform_enums.h
common/platform/src/: config.c  platform.c
tools/: CMakeLists.txt
tools/efm_viewer/: efm_viewer.py
tools/efm_viewer/firmware/: CMakeLists.txt  main.c
